@@ -21,27 +21,20 @@ Copyright_License {
 }
 */
 
-#ifndef XCSOAR_DATA_GLOBALS_HPP
-#define XCSOAR_DATA_GLOBALS_HPP
+#ifndef XCSOAR_WEATHER_RASP_PROVIDERS_HPP
+#define XCSOAR_WEATHER_RASP_PROVIDERS_HPP
 
-#include <memory>
+#include <tchar.h>
 
-class RaspStore;
+struct RaspProvider {
+  const TCHAR *name;
+  const char *url;
+};
 
 /**
- * This namespace provides helper functions to access generic global
- * data objects.  Use them when you don't know where else to get them.
- * This is a last resort only, don't use it if you have a better way
- * to do it.
- *
- * This namespace exists to avoid direct access to #MainWindow and
- * others, because that would mean the code is not reusable in other
- * applications, while the functions in this namespace can easily be
- * replaced in another program.
+ * List of well-known RASP providers.  The list ends with a sentinel
+ * item with nullptr values.
  */
-namespace DataGlobals {
-std::shared_ptr<RaspStore> GetRasp();
-void SetRasp(std::shared_ptr<RaspStore> rasp);
-};
+extern const RaspProvider rasp_providers[];
 
 #endif
